# bitcoindata

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  api_integrations.py  app.py  bitcoin_ath_analyzer.py  bitcoin_data_cache.csv  bitcoin_merged_priority.csv  clear_gcs_cache.py  deploy.sh  dev-setup.md  index.html  package-lock.json  package.json  pyproject.toml  rebuild_comprehensive_data.py  scheduled_job.py  tailwind.config.js  test-deployment.sh  tsconfig.json  vite.config.js  web_deployment_example.py  web_deployment_example_react.py
docs/: COMPONENT_ABSTRACTIONS.md  DEPLOYMENT_GUIDE.md  TYPESCRIPT_TAILWIND_REFACTOR_SUMMARY.md  dev-setup.md
src/: App.tsx  index.css
src/components/: CumulativeChart.tsx  CurrentStats.tsx  DistributionChart.tsx  EasiestDaysTable.tsx  HardestDays.jsx  HardestDays.tsx  HardestDaysTable.tsx  HistoricalChart.tsx
src/components/common/: ChartContainer.jsx  ChartContainer.tsx  InsightBox.tsx  LoadingErrorWrapper.tsx  PlotlyChart.jsx  PlotlyChart.tsx  Section.jsx  Section.tsx  index.ts
src/hooks/: useApiData.ts
src/types/: index.ts  plotly.d.ts
src/utils/: chartStyles.ts  cn.ts  helpers.ts  index.ts  sentiment.ts
templates/: dashboard.html
